--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,23 @@
 
-  <div>
-    <ol class="d-flex gap-5 p-4 ">
+  <div class="px-5 py-2">
+    <ol class="d-flex gap-5 p-4 flex-wrap">
       <li><a routerLink="studentlist"  class="btn btn-outline-dark">Student List</a></li>
       <li><a routerLink="employeelist" class="btn btn-outline-dark">Employee List</a></li>
+      <li><a routerLink="fruitlist" class="btn btn-outline-dark">Fruit List</a></li>
+      <li><a routerLink="courselist" class="btn btn-outline-dark">Course List</a></li>
+      <li><a routerLink="booklist" class="btn btn-outline-dark">Book List</a></li>
+      <li><a routerLink="citylist" class="btn btn-outline-dark">City List</a></li>
+      <li><a routerLink="movielist" class="btn btn-outline-dark">Movie List</a></li>
+      <li><a routerLink="carmodel" class="btn btn-outline-dark">Car Model List</a></li>
+      <li><a routerLink="productlist" class="btn btn-outline-dark">Product List</a></li>
+      <li><a routerLink="subjectlist" class="btn btn-outline-dark">Subject List</a></li>
 
     </ol>
   </div>
 
 
+
+  <hr>
 
 
 
